--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,8 +1,3 @@
-.modal{
-    background: url("/assets/Login-Screen-Background-Wood-5.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
 .card-center{
 		margin-left: auto;
 		margin-right: auto;
@@ -31,3 +26,37 @@
 	
 }
 .wizard > .steps .current a, .wizard > .steps .current a:hover, .wizard > .steps .current a:active{background: #2196f3 !important;}
+
+
+#login_modal {
+  overflow: auto;
+  position: relative;
+}
+
+#login_modal:before {
+  content: "";
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: -1;
+
+  display: block;
+  background-image: url("/assets/Login-Screen-Background-Wood-5.jpg");
+  background-size:cover;
+  width: 100%;
+  height: 100%;
+
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+}
+
+.centered {
+  position: fixed;
+  top: 27%;
+  left: 33%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
