--- a/app/views/exam_panels/index.html.erb
+++ b/app/views/exam_panels/index.html.erb
@@ -1,7 +1,23 @@
-<div class="card card-center w-75">
-  <div class="card-header text-center">
-    <h3 class="card-title">Screening Test</h3>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Screening Test</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      
+    </ul>
+    <div class="form-inline my-2 my-lg-0">
+    <%=link_to "Log-Out", destroy_employee_session_path, method: :delete, class: "btn btn-outline-success my-2 my-sm-0"%>
+    </div>
   </div>
+</nav>
+
+<div class="card card-center w-75">
   <div class="card-body">
   <div class="row">
   <div class="col-sm-3">
